forum listing page text alignment issue fixed

--- a/docroot/sites/all/themes/ambitious/css/layouts/topic-forum.css
+++ b/docroot/sites/all/themes/ambitious/css/layouts/topic-forum.css
@@ -2258,7 +2258,7 @@ fieldset {
 @media (max-width: 767px) {
   /* line 1304, ../../sass/layouts/topic-forum.scss */
   .node-type-topic .block-inspire.orange-box {
-    background-image: url('../../images/action-bg2.jpg?1423044553');
+    background-image: url('../../images/action-bg2.jpg?1427824978');
   }
 }
 
